--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -223,6 +223,10 @@ body {
   gap: 24px;
 }
 
+.footer {
+  padding: 0px 80px 44px 80px;
+}
+
 .btns_hero_sections .btn1 {
   font-family: var(--sec-font);
   font-weight: 500;
@@ -473,13 +477,17 @@ body {
   gap: 44px;
 }
 
-.text_third {
+/* .text_third {
   display: flex;
   flex-direction: column;
   gap: 24px;
+} */
+.third_headng {
+  display: flex;
+  flex-direction: column;
 }
 
-.text_third h1 {
+.third_headng h1 {
   font-family: var(--main-font);
   font-size: 48px;
   font-weight: 500;
@@ -830,5 +838,271 @@ body {
   line-height: 24px;
   color: #ffffff99;
 }
+
+.mobile-toggle {
+  display: none;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 30px;
+  height: 21px;
+  cursor: pointer;
+}
+
+.mobile-toggle span {
+  height: 3px;
+  width: 100%;
+  background-color: #333;
+  border-radius: 10px;
+}
+
+@media screen and (max-width: 1024px) {
+
+  .hero_section,
+  .third_section,
+  .fourth_section,
+  .secont_section_contatainer,
+  .testimunial_section,
+  .seven_start,
+  .six_section,
+  .sliding_image_section {
+    padding: 0px 50px;
+  }
+
+  .footer {
+    padding: 32px 50px;
+  }
+
+  .nvabar {
+    padding: 24px 50px;
+  }
+
+  .fourth_one {
+    height: 50vh;
+  }
+
+  .cant_why_text_section,
+  .first_why_card {
+    gap: 18px;
+  }
+
+  .six_glassy_effect {
+    padding: 32px;
+    width: 90%;
+  }
+
+  .card_content {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .second_text_content {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .card_grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .img_third {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+
+  .text_third {
+    width: 100%;
+    gap: 24px;
+  }
+
+  .third_headng h1,
+  .text h1 {
+    font-size: 34px;
+    line-height: 44px;
+  }
+
+  .text h2 {
+    font-size: 30px;
+    line-height: 38px;
+  }
+
+  .third_headng {
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
+  }
+
+  .why_text_section {
+    gap: 8px;
+  }
+
+  .six_glassy_effect {
+    padding: 24px;
+    width: 100%;
+    backdrop-filter: none;
+  }
+
+  .seven_section_partitions {
+    flex-direction: column;
+    gap: 24px;
+  }
+
+  .faq-container {
+    padding: 0px;
+  }
+
+  #text_section {
+    gap: 0px;
+  }
+
+
+}
+
+@media screen and (max-width: 768px) {
+  .container_third {
+    flex-direction: column-reverse;
+  }
+
+  .container_fourth {
+    flex-direction: column;
+  }
+
+  .img_third img,
+  .img_thirds img {
+    width: 100%;
+    object-fit: cover;
+    height: 400px;
+  }
+
+  .navbar_nav {
+    position: relative;
+  }
+
+  .mobile-toggle {
+    display: flex;
+    z-index: 100;
+  }
+
+  .logo {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  nav {
+    position: absolute;
+    top: 65px;
+    right: 0;
+    width: 50%;
+    backdrop-filter: blur(1px);
+    background: #000;
+    -webkit-backdrop-filter: blur(8px);
+    border-bottom: 1px solid rgba(0, 0, 0, 1);
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 1);
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.3s ease-in-out;
+    z-index: 99;
+    border-radius: 0px 0px 12px 12px;
+  }
+
+  nav.mobile-menu-open {
+    max-height: 300px;
+  }
+
+  nav ul {
+    flex-direction: column;
+    padding: 20px;
+  }
+
+  .logo nav ul {
+    display: flex;
+    align-items: flex-start;
+    gap: 12px;
+  }
+
+  #btn {
+    width: 30%;
+  }
+
+}
+
+@media screen and (max-width: 600px) {
+  .home_container {
+    gap: 56px;
+  }
+
+  .heading_sectin h1 {
+    font-size: 44px;
+    line-height: 56px;
+  }
+
+  .main_hero_section {
+    height: 100%;
+    padding: 24px 0px 0px 0px;
+  }
+
+  .hero_section {
+    height: 100%;
+  }
+
+  .heading_sectin p {
+    font-size: 20px;
+    line-height: 32px;
+    letter-spacing: 1.5px;
+  }
+
+  .hero_section,
+  .third_section,
+  .fourth_section,
+  .secont_section_contatainer,
+  .testimunial_section,
+  .seven_start,
+  .six_section,
+  .sliding_image_section {
+    padding: 0px 30px;
+  }
+
+  .footer {
+    padding: 32px 30px;
+  }
+
+  .nvabar {
+    padding: 24px 30px;
+  }
+
+  .card_grid,
+  .card_content {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .btns_hero_sections {
+    align-items: flex-start;
+    flex-direction: column;
+  }
+
+  #btn {
+    display: none;
+  }
+
+  .first_img img {
+    display: none;
+  }
+
+  .second_text_content {
+    position: static;
+    /* top: 190%; */
+    /* left: 100%; */
+    transform: translate(0%, 0%);
+  }
+
+  .third_headng {
+    flex-direction: column;
+    gap: 0;
+  }
+}
+
 
 /* <!-- six_section end-  -> */
